<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listavideos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation ="horizontal"
            android:padding="6dp">
            <ImageView
                android:id="@+id/iconopais"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/background_italion"
                >
            </ImageView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconopais"
                android:orientation="vertical"
                
                >

                <TextView
                    android:id="@+id/nombrevideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_or_move"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/fechavideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/freestyle"
                    android:layout_marginLeft="15dp">
                </TextView>

                <TextView
                    android:id="@+id/descargarvideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/descargar"

                        android:textSize="13dp"
                    android:textColor="#0000A0"
                    android:textStyle="italic"></TextView>

            </LinearLayout>

            <Button
                android:id="@+id/botonver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="26dp"
              android:text="Play"
                android:drawableStart="@drawable/ic_baseline_play_circle_24"
           >

            </Button>

            <TextView
                android:id="@+id/linkBorrarVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/botonver"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:text="Borrar"
                android:textColor="#000000">

            </TextView>

        </RelativeLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>